<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#75ECC60D"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:layout_gravity="clip_vertical|center_horizontal"
            android:contentDescription="@string/spongebob_picture"
            app:srcCompat="@mipmap/sponge_bob" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/spongebob_quote_app"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#DD6718"
            android:textColorLink="#FFFFFF"
            android:textSize="36sp"
            app:fontFamily="sans-serif-condensed-light" />

        <EditText
            android:id="@+id/quoteTVID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/insert_text_you_wish_to_alter_here"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/buttonID"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/convert"
                android:textColor="#DD6718" />

            <Button
                android:id="@+id/clearButtonID"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:padding="10dp"
                android:text="@string/clear"
                android:textColor="#DD6718" />
        </LinearLayout>

        <EditText
            android:id="@+id/quoteETVID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/new_text_will_show_here"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />
    </LinearLayout>
</ScrollView>